# robotsim

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert  grid.vert
src/: arm.cpp  arm.h  camera.cpp  camera.h  gizmo.cpp  gizmo.h  ik.cpp  ik.h  keyframes.cpp  keyframes.h  main.cpp  picking.h  renderer.cpp  renderer.h  ui.cpp  ui.h
